apps/wiki/postgres/networkpolicies/postgres.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
  namespace: wiki
spec:
  endpointSelector:
    matchLabels:
      app: wiki
      component: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: wiki
            component: wiki
            io.kubernetes.pod.namespace: wiki
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
